open and close menu

--- a/src/app/visor/visor-menu/visor-menu.component.html
+++ b/src/app/visor/visor-menu/visor-menu.component.html
@@ -1,1 +1,4 @@
-<p>visor-menu works!</p>
+<div #offmenu id="off-menu" class="off-menu">
+  <!-- <button #toogleBtn id="toogleBtn" class="button-toggle" (click)="toggle()">+</button> -->
+  <p-button  class="button-toggle" (click)="toggle()">+</p-button>
+</div>
