--- a/src/app/visor/visor.component.html
+++ b/src/app/visor/visor.component.html
@@ -1,5 +1,6 @@
 <div class="relative container">
   <app-visor-header class="absolute top-0 z-2 w-full h-1/3 custom-top-div"></app-visor-header>
+  <app-visor-menu class="absolute z-4"></app-visor-menu>
   <app-visor-footer class="absolute bottom-0 z-2 w-full h-1/5 custom-bottom-div"></app-visor-footer>
 
   <div class="absolute top-0 z-1 grid grid-nogutter h-full w-full">
