--- a/src/app/visor/visor-header/visor-header.component.html
+++ b/src/app/visor/visor-header/visor-header.component.html
@@ -1,3 +1,3 @@
 <div class="h-full p-4 flex align-items-center justify-content-end">
-    <p-button icon="pi pi-moon"  (onClick)="toggleMode()"></p-button>
+    <p-button [icon]="isDarkMode ? 'pi pi-moon' : 'pi pi-sun'"  (onClick)="toggleMode()"></p-button>
 </div>
