adjust axe Y translation

--- a/src/app/visor/visor-menu/visor-menu.component.scss
+++ b/src/app/visor/visor-menu/visor-menu.component.scss
@@ -9,7 +9,7 @@
 }
 
 .off-menu.off-menu-opened {
-  transform: translateY(0);
+  transform: translateY(25.8%);
   background: #19ca82;
   transition: transform .3s ease-out background 0.3s ease-out;
 }
