--- a/src/app/visor/visor-menu/visor-menu.component.scss
+++ b/src/app/visor/visor-menu/visor-menu.component.scss
@@ -1,11 +1,15 @@
 .off-menu {
   position: fixed;
-  max-width: 24rem;
-  width: 350px;
+  max-height: 24rem;
+  width: 100%;
   height: 350px;
   transform: translateY(-74.5%);
   background: transparent;
   transition: transform 0.3s ease-out, background 0.3s ease-out;
+
+  @media only screen and (min-width: 1024px) {
+    width: 50%;
+  }
 }
 
 .off-menu.off-menu-opened {
