--- a/src/app/visor/visor.component.scss
+++ b/src/app/visor/visor.component.scss
@@ -1,18 +1,23 @@
-.container {
-    height: 100vh;
+@import "../../styles//variables.scss";
+
+.square {
+  height: 50%;
+  border: 1px solid red;
+}
+
+.header{
+  height: $header-height;
+  background-color: rgba(255, 0, 0, 0.5);
+
+  @media only screen and (min-width: 1024px) {
+    height: $header-height * 2;
   }
-  
-  .square {
-    height: 50%;
-    border: 1px solid red;
+}
+
+.footer {
+  height: $footer-height;
+  background-color: rgba(0, 0, 255, 0.5);
+  @media only screen and (min-width: 1024px) {
+    height: ($footer-height * 2) - 6px;
   }
-  
-  .custom-top-div {
-    height: calc(1/4 * 50%);
-    background-color: rgba(255, 0, 0, 0.5);
-  }
-  
-  .custom-bottom-div {
-    height: calc(1/13 * 50%);
-    background-color: rgba(0, 0, 255, 0.5);
-  }
+}
