--- a/src/app/visor/visor-menu/visor-menu.component.html
+++ b/src/app/visor/visor-menu/visor-menu.component.html
@@ -5,5 +5,12 @@
     <p-button [icon]="this.uiLayoutService.isMenuOpen() ? 'pi pi-angle-up' : 'pi pi-angle-down'" icon="pi pi-angle-down" class="button-toggle"
       (click)="toggle()"></p-button>
   }
-  <p-tree [value]="treeNodes" selectionMode="checkbox" [(selection)]="selectedNodes" (onNodeSelect)="onNodeSelection($event)"></p-tree>
+  <p-tree
+    [value]="treeNodes"
+    selectionMode="checkbox"
+    [(selection)]="selectedNodes"
+    (onNodeSelect)="onNodeSelection($event)"
+    (onNodeUnselect)="onNodeUnSelection($event)"
+  >
+  </p-tree>
 </div>
